# autoinput

./: Cargo.toml  README.md
src/: app.rs  main.rs
