[package]
name = "autoinput"
version = "0.1.0"
authors = ["Juliette Cordor"]
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.20.0"
eframe = { version = "0.20.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
tracing-subscriber = "0.3"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
