[package]
name = "autoinput"
version = "0.1.0"
authors = ["Juliette Cordor"]
edition = "2021"
rust-version = "1.65"


[dependencies]
# Basic requirements for the app
egui = "0.20.1"
eframe = { version = "0.20.1", features = ["persistence", "dark-light"] }

# Used for debug logging
tracing-subscriber = "0.3.16"

# Used for app persistence
serde = { version = "1.0.152", features = ["derive"] }
